--- a/hw1/Makefile
+++ b/hw1/Makefile
@@ -1,4 +1,4 @@
-all: detab reverse
+all: detab reverse fsm
 
 detab: detab.c
 	gcc -o detab detab.c
@@ -6,5 +6,9 @@ detab: detab.c
 reverse: reverse.c
 	gcc -o reverse reverse.c
 
+fsm: main.c fsm.c fsm.h
+	gcc -c main.c fsm.c
+	gcc -o fsm main.o fsm.o
+
 clean:
-	rm -f detab reverse *.o
+	rm -f detab reverse fsm *.o
