--- a/hw3/prob2/test/Makefile
+++ b/hw3/prob2/test/Makefile
@@ -1,14 +1,14 @@
 CXX = g++ -std=c++11 -O3
-LIBS = -lm -lfraction
+LIBS = -lm -lcomplex
 INCLUDE_DIRS = -I..
 LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc
+SOURCES = 1.cc 2.cc 3.cc 4.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
 
-%.x: %.cc ../libfraction.a
+%.x: %.cc ../libcomplex.a
 	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
 
 test: $(TARGETS)
