--- a/hw3/prob3/test/Makefile
+++ b/hw3/prob3/test/Makefile
@@ -1,17 +1,18 @@
 CXX = g++ -std=c++11
-LIBS = -lm
+LIBS = -lm -lfraction -lcomplex
 INCLUDE_DIRS = -I..
+LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc
+SOURCES = 1.cc 2.cc 3.cc 4.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
 
-%.x: %.cc ../*.hh
-	$(CXX) $(LIBS) $(INCLUDE_DIRS) $< -o $@
+%.x: %.cc ../*.hh ../*.a
+	$(CXX) $(INCLUDE_DIRS) $(LIBDIRS) $< $(LIBS) -o $@
 
 test: $(TARGETS)
 	./test.sh
- 
+
 clean:
 	rm -rf $(TARGETS)
