--- a/hw3/prob3/test/Makefile
+++ b/hw3/prob3/test/Makefile
@@ -3,7 +3,7 @@ LIBS = -lm -lfraction -lcomplex
 INCLUDE_DIRS = -I..
 LIBDIRS = -L..
 
-SOURCES = 1.cc 2.cc 3.cc 4.cc
+SOURCES = 1.cc 2.cc 3.cc 4.cc 5.cc
 TARGETS = $(SOURCES:%.cc=%.x)
 
 all: $(TARGETS)
